--- a/source/index.html
+++ b/source/index.html
@@ -259,52 +259,57 @@
     <section class="advantages">
       <div class="advantages__container">
         <h2>Наши преимущества</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item">
-            <div class="advantages__number">
-              <b>900</b>
-              <span>кв/м</span>
+        <div class="advantages__list">
+          <div class="advantages__wrap">
+            <div class="advantages__item">
+              <div class="advantages__number">
+                <b>900</b>
+                <span>кв/м</span>
+              </div>
+              <div class="advantages__text">
+                <h3>Площадь</h3>
+                <p>Занимайтесь без очередей и толпучки</p>
+              </div>
             </div>
-            <div class="advantages__text">
-              <h3>Площадь</h3>
-              <p>Занимайтесь без очередей и толпучки</p>
+            <div class="advantages__item">
+              <div class="advantages__number">
+                <b>70</b>
+                <span>машин</span>
+              </div>
+              <div class="advantages__text">
+                <h3>Собственная парковка</h3>
+                <p>Вы всегда найдете место для своей машины на нашей парковке</p>
+              </div>
             </div>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__number">
-              <b>70</b>
-              <span>машин</span>
+          </div>
+          <div class="advantages__item advantages__item--blue">
+            <b>100</b>
+            <span>Тренажеров</span>
+            <p>Современные тренажеры на все группы мышц</p>
+          </div>
+          <div class="advantages__wrap advantages__wrap--bottom">
+            <div class="advantages__item">
+              <div class="advantages__number">
+                <b>350</b>
+                <span>мест</span>
+              </div>
+              <div class="advantages__text">
+                <h3>Комфорт</h3>
+                <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+              </div>
             </div>
-            <div class="advantages__text">
-              <h3>Собственная парковка</h3>
-              <p>Вы всегда найдете место для своей машины на нашей парковке</p>
+            <div class="advantages__item">
+              <div class="advantages__number">
+                <b>5+</b>
+                <span>лет</span>
+              </div>
+              <div class="advantages__text">
+                <h3>Тренерский опыт</h3>
+                <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
+              </div>
             </div>
-          </li>
-          <li class="advantages__item blue">
-
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__number">
-              <b>350</b>
-              <span>мест</span>
-            </div>
-            <div class="advantages__text">
-              <h3>Комфорт</h3>
-              <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
-            </div>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__number">
-              <b>5+</b>
-              <span>лет</span>
-            </div>
-            <div class="advantages__text">
-              <h3>Тренерский опыт</h3>
-              <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+          </div>
+        </div>
     </section>
     <section class="stock">
       <div class="stock__container">
