--- a/source/index.html
+++ b/source/index.html
@@ -355,24 +355,52 @@
     <section class="review">
       <div class="review__container">
         <h2>Отзывы</h2>
-        <button class="review__button" type="button" aria-label="Предыдущий слайд">
-          <svg width="16" height="32" fill="none">
-            <use xlink:href="img/sprite.svg#logo-prev"></use>
-          </svg>
-        </button>
-        <div class="review__card">
-          <img src="img/review.png" width="80" height="80" alt="Фото клиента">
-          <blockquote>
-            <h3>Анна Орлова</h3>
-            «Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
-            дружелюбный. Зал просторный, даже в вечернее время нет очередей»
-          </blockquote>
+        <div class="slider-container">
+          <button class="swiper-button-prev" type="button" aria-label="Предыдущий слайд">
+            <svg width="16" height="32" fill="none">
+              <use xlink:href="img/sprite.svg#logo-prev"></use>
+            </svg>
+          </button>
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="review__card">
+                  <img src="img/review.png" width="80" height="80" alt="Фото клиента">
+                  <blockquote>
+                    <h3>Анна Орлова</h3>
+                    «Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
+                    дружелюбный. Зал просторный, даже в вечернее время нет очередей»
+                  </blockquote>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="review__card">
+                  <img src="img/review.png" width="80" height="80" alt="Фото клиента">
+                  <blockquote>
+                    <h3>Анна Орлова</h3>
+                    «Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
+                    дружелюбный. Зал просторный, даже в вечернее время нет очередей»
+                  </blockquote>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="review__card">
+                  <img src="img/review.png" width="80" height="80" alt="Фото клиента">
+                  <blockquote>
+                    <h3>Анна Орлова</h3>
+                    «Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал
+                    дружелюбный. Зал просторный, даже в вечернее время нет очередей»
+                  </blockquote>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="swiper-button-next" type="button" aria-label="Следующий слайд">
+            <svg width="16" height="32" fill="none">
+              <use xlink:href="img/sprite.svg#logo-next"></use>
+            </svg>
+          </button>
         </div>
-        <button class="review__button" type="button" aria-label="Следующий слайд">
-          <svg width="16" height="32" fill="none">
-            <use xlink:href="img/sprite.svg#logo-next"></use>
-          </svg>
-        </button>
       </div>
     </section>
     <section class="contacts">
