--- a/source/index.html
+++ b/source/index.html
@@ -209,59 +209,125 @@
     <section class="trainers">
       <div class="trainers__container">
         <h2>Тренеры</h2>
-        <div class="trainers__slider">
-          <div class="trainers__slide">
-            <h3 class="trainers__slide-title">Анна Павлова</h3>
-            <img src="img/pavlova.jpg" width="260" height="294" alt="Анна Павлова">
-            <div class="trainers__popup">
-              <h3>Анна Павлова</h3>
-              <span>CrossFit</span>
-              <ul class="trainers__popup-list">
-                <li class="trainers__popup-item">Certified Level 3 Trainer</li>
-                <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
-                <li class="trainers__popup-item">Опыт — 6 лет</li>
-              </ul>
+        <div class="trainers__slider-container">
+          <button class="trainers__button-prev" type="button" aria-label="Предыдущий слайд">
+            <svg width="16" height="32" fill="none">
+              <use xlink:href="img/sprite.svg#logo-prev"></use>
+            </svg>
+          </button>
+          <div class="trainers__swiper-container">
+            <div class="trainers__wrapper">
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Анна Павлова</h3>
+                <img src="img/pavlova.jpg" width="260" height="294" alt="Анна Павлова">
+                <div class="trainers__popup">
+                  <h3>Анна Павлова</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Алексей Лавров</h3>
+                <img src="img/lavrov.jpg" width="260" height="294" alt="Алексей Лавров">
+                <div class="trainers__popup">
+                  <h3>Алексей Лавров</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Александр Пашков</h3>
+                <img src="img/pashkov.jpg" width="260" height="294" alt="Александр Пашков">
+                <div class="trainers__popup">
+                  <h3>Александр Пашков</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Мария Кетова</h3>
+                <img src="img/ketova.jpg" width="260" height="294" alt="Мария Кетова">
+                <div class="trainers__popup">
+                  <h3>Мария Кетова</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Анна Павлова</h3>
+                <img src="img/pavlova.jpg" width="260" height="294" alt="Анна Павлова">
+                <div class="trainers__popup">
+                  <h3>Анна Павлова</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Алексей Лавров</h3>
+                <img src="img/lavrov.jpg" width="260" height="294" alt="Алексей Лавров">
+                <div class="trainers__popup">
+                  <h3>Алексей Лавров</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Александр Пашков</h3>
+                <img src="img/pashkov.jpg" width="260" height="294" alt="Александр Пашков">
+                <div class="trainers__popup">
+                  <h3>Александр Пашков</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="trainers__slide">
+                <h3 class="trainers__slide-title">Мария Кетова</h3>
+                <img src="img/ketova.jpg" width="260" height="294" alt="Мария Кетова">
+                <div class="trainers__popup">
+                  <h3>Мария Кетова</h3>
+                  <span>CrossFit</span>
+                  <ul class="trainers__popup-list">
+                    <li class="trainers__popup-item">Certified Level 3 Trainer</li>
+                    <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="trainers__popup-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="trainers__slide">
-            <h3 class="trainers__slide-title">Алексей Лавров</h3>
-            <img src="img/lavrov.jpg" width="260" height="294" alt="Алексей Лавров">
-            <div class="trainers__popup">
-              <h3>Алексей Лавров</h3>
-              <span>CrossFit</span>
-              <ul class="trainers__popup-list">
-                <li class="trainers__popup-item">Certified Level 3 Trainer</li>
-                <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
-                <li class="trainers__popup-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </div>
-          <div class="trainers__slide">
-            <h3 class="trainers__slide-title">Александр Пашков</h3>
-            <img src="img/pashkov.jpg" width="260" height="294" alt="Александр Пашков">
-            <div class="trainers__popup">
-              <h3>Александр Пашков</h3>
-              <span>CrossFit</span>
-              <ul class="trainers__popup-list">
-                <li class="trainers__popup-item">Certified Level 3 Trainer</li>
-                <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
-                <li class="trainers__popup-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </div>
-          <div class="trainers__slide">
-            <h3 class="trainers__slide-title">Мария Кетова</h3>
-            <img src="img/ketova.jpg" width="260" height="294" alt="Мария Кетова">
-            <div class="trainers__popup">
-              <h3>Мария Кетова</h3>
-              <span>CrossFit</span>
-              <ul class="trainers__popup-list">
-                <li class="trainers__popup-item">Certified Level 3 Trainer</li>
-                <li class="trainers__popup-item">Победитель чемпионата России по CrossFit</li>
-                <li class="trainers__popup-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </div>
+          <button class="trainers__button-next" type="button" aria-label="Следующий слайд">
+            <svg width="16" height="32" fill="none">
+              <use xlink:href="img/sprite.svg#logo-next"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </section>
@@ -356,7 +422,7 @@
       <div class="review__container">
         <h2>Отзывы</h2>
         <div class="review__slider-container">
-          <button class="swiper-button-prev" type="button" aria-label="Предыдущий слайд">
+          <button class="review__button-prev" type="button" aria-label="Предыдущий слайд">
             <svg width="16" height="32" fill="none">
               <use xlink:href="img/sprite.svg#logo-prev"></use>
             </svg>
@@ -395,7 +461,7 @@
               </div>
             </div>
           </div>
-          <button class="swiper-button-next" type="button" aria-label="Следующий слайд">
+          <button class="review__button-next" type="button" aria-label="Следующий слайд">
             <svg width="16" height="32" fill="none">
               <use xlink:href="img/sprite.svg#logo-next"></use>
             </svg>
