--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,8 @@
           <!-- 1х: 324px; 2x: 648px -->
           <source srcset="img/coach-tablet@1x.jpg 1x, img/coach-tablet@2x.jpg 2x" media="(max-width: 1199px)">
           <!-- 1х: 500px; 2x: 1000px -->
-          <img src="img/coach-desktop@1x.jpg" srcset="img/coach-desktop@2x.jpg" width="500" height="556" alt="Один из тренеров">
+          <img src="img/coach-desktop@1x.jpg" srcset="img/coach-desktop@2x.jpg" width="500" height="556"
+            alt="Один из тренеров">
         </picture>
         <ul class="intro__social-list">
           <li class="intro__social-item">
@@ -402,6 +403,7 @@
             </div>
           </div>
         </div>
+      </div>
     </section>
     <section class="stock">
       <div class="stock__container">
@@ -422,7 +424,7 @@
               media="(max-width: 1199px)">
             <source type="image/webp" srcset="img/stock-desktop@1x.webp 1x, img/stock-desktop@2x.webp 2x">
             <!-- 1х: 290px; 2x: 580px -->
-            <source srcset="img/stock-mobile@1x.jpg 1x, img/stock-mobile@1x.jpg 1x" media="(max-width: 767px)">
+            <source srcset="img/stock-mobile@1x.jpg 1x, img/stock-mobile@2x.jpg 2x" media="(max-width: 767px)">
             <!-- 1х: 399px; 2x: 798px -->
             <source srcset="img/stock-tablet@1x.jpg 1x, img/stock-tablet@2x.jpg 2x" media="(max-width: 1199px)">
             <!-- 1х: 280px; 2x: 560px -->
