--- a/source/index.html
+++ b/source/index.html
@@ -20,13 +20,19 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="header__container">
+      <a class="header__link" aria-label="Ссылка на главную страницу">
+        <svg width="89" height="20">
+          <use xlink:href="img/sprite.svg#logo-main"></use>
+        </svg>
+      </a>
+      <a class="header__tel" href="tel:88005555555">8-800-555-55-55</a>
+    </div>
+  </header>
   <main class="main">
     <section class="intro">
       <div class="intro__container">
-        <div class="intro__top">
-          <a class="intro__main-link">Supergym</a>
-          <a class="intro__tel" href="tel:88005555555">8-800-555-55-55</a>
-        </div>
         <div class="intro__info">
           <span class="intro__city">Омск</span>
           <h1>Фитнес центр</h1>
@@ -539,7 +545,11 @@
   </main>
   <footer class="footer">
     <div class="footer__container">
-      <a class="footer__main-link">Supergym</a>
+      <a class="footer__main-link" aria-label="Ссылка на главную страницу">
+        <svg width="89" height="20">
+          <use xlink:href="img/sprite.svg#logo-main"></use>
+        </svg>
+      </a>
       <ul class="footer__list">
         <li class="footer__item">
           <a class="footer__link" href="#">Услуги</a>
