--- a/source/index.html
+++ b/source/index.html
@@ -421,7 +421,7 @@
               <b>4999</b>
             </div>
             <p>Безлимитный абонемент в тренажерный зал</p>
-            <a class="stock__link" href="">Подробнее</a>
+            <a class="stock__link" href="#">Подробнее</a>
           </div>
           <picture>
             <source type="image/webp" srcset="img/stock-mobile@1x.webp 1x, img/stock-mobile@2x.webp 2x"
@@ -442,12 +442,12 @@
           <li class="stock__item">
             <h3>Месяц бесплатно</h3>
             <p>Приведи друга, получи абонемент в подарок</p>
-            <a class="stock__link stock__link--blue" href="">Подробнее</a>
+            <a class="stock__link stock__link--blue" href="#">Подробнее</a>
           </li>
           <li class="stock__item">
             <h3>Скидка 20%</h3>
             <p>Корпоративный фитнес с командой</p>
-            <a class="stock__link stock__link--blue" href="">Подробнее</a>
+            <a class="stock__link stock__link--blue" href="#">Подробнее</a>
           </li>
         </ul>
       </div>
