--- a/source/index.html
+++ b/source/index.html
@@ -114,7 +114,7 @@
               <h3>С тренером</h3>
               <span class="membership__time">12 занятий</span>
               <span class="membership__shadow">5000</span>
-              <span class="membership__price">5000 &#8381;</span>
+              <span class="membership__price">5000 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -123,7 +123,7 @@
               <h3>Дневной</h3>
               <span class="membership__time">с 8:00 до 17:00</span>
               <span class="membership__shadow">1700</span>
-              <span class="membership__price">1700 &#8381;</span>
+              <span class="membership__price">1700 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -132,7 +132,7 @@
               <h3>Полный день</h3>
               <span class="membership__time">с 8:00 до 22:00</span>
               <span class="membership__shadow">2700</span>
-              <span class="membership__price">2700 &#8381;</span>
+              <span class="membership__price">2700 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -143,7 +143,7 @@
               <h3>С тренером</h3>
               <span class="membership__time">72 занятия</span>
               <span class="membership__shadow">30000</span>
-              <span class="membership__price">30000 &#8381;</span>
+              <span class="membership__price">30000 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -152,7 +152,7 @@
               <h3>Дневной</h3>
               <span class="membership__time">с 8:00 до 17:00</span>
               <span class="membership__shadow">10200</span>
-              <span class="membership__price">10200 &#8381;</span>
+              <span class="membership__price">10200 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -161,7 +161,7 @@
               <h3>Полный день</h3>
               <span class="membership__time">с 8:00 до 22:00</span>
               <span class="membership__shadow">16200</span>
-              <span class="membership__price">16200 &#8381;</span>
+              <span class="membership__price">16200 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -172,7 +172,7 @@
               <h3>С тренером</h3>
               <span class="membership__time">144 занятия</span>
               <span class="membership__shadow">110000</span>
-              <span class="membership__price">110000 &#8381;</span>
+              <span class="membership__price">110000 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -181,7 +181,7 @@
               <h3>Дневной</h3>
               <span class="membership__time">с 8:00 до 17:00</span>
               <span class="membership__shadow">20400</span>
-              <span class="membership__price">20400 &#8381;</span>
+              <span class="membership__price">20400 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
@@ -190,7 +190,7 @@
               <h3>Полный день</h3>
               <span class="membership__time">с 8:00 до 22:00</span>
               <span class="membership__shadow">32400</span>
-              <span class="membership__price">32400 &#8381;</span>
+              <span class="membership__price">32400 ₽</span>
               <span class="membership__buy">Купить абонемент</span>
             </a>
           </li>
