--- a/source/index.html
+++ b/source/index.html
@@ -110,7 +110,7 @@
         </div>
         <ul class="membership__type-list membership__type-list--active">
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>С тренером</h3>
               <span class="membership__time">12 занятий</span>
               <span class="membership__shadow">5000</span>
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>Дневной</h3>
               <span class="membership__time">с 8:00 до 17:00</span>
               <span class="membership__shadow">1700</span>
@@ -128,7 +128,7 @@
             </a>
           </li>
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>Полный день</h3>
               <span class="membership__time">с 8:00 до 22:00</span>
               <span class="membership__shadow">2700</span>
@@ -139,7 +139,7 @@
         </ul>
         <ul class="membership__type-list">
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>С тренером</h3>
               <span class="membership__time">72 занятия</span>
               <span class="membership__shadow">30000</span>
@@ -148,7 +148,7 @@
             </a>
           </li>
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>Дневной</h3>
               <span class="membership__time">с 8:00 до 17:00</span>
               <span class="membership__shadow">10200</span>
@@ -157,7 +157,7 @@
             </a>
           </li>
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>Полный день</h3>
               <span class="membership__time">с 8:00 до 22:00</span>
               <span class="membership__shadow">16200</span>
@@ -168,7 +168,7 @@
         </ul>
         <ul class="membership__type-list">
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>С тренером</h3>
               <span class="membership__time">144 занятия</span>
               <span class="membership__shadow">110000</span>
@@ -177,7 +177,7 @@
             </a>
           </li>
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>Дневной</h3>
               <span class="membership__time">с 8:00 до 17:00</span>
               <span class="membership__shadow">20400</span>
@@ -186,7 +186,7 @@
             </a>
           </li>
           <li class="membership__type-item">
-            <a class="membership__type-link" href="buy-membership.html">
+            <a class="membership__type-link" href="#">
               <h3>Полный день</h3>
               <span class="membership__time">с 8:00 до 22:00</span>
               <span class="membership__shadow">32400</span>
@@ -212,7 +212,7 @@
             </div>
           </div>
           <span class="promo__description">Ежегодные соревнования по CrossFit</span>
-          <a class="promo__link" href="fillblank.html">Заполнить заявку</a>
+          <a class="promo__link" href="#">Заполнить заявку</a>
         </div>
         <picture>
           <source type="image/webp" srcset="img/promo-mobile@1x.webp 1x, img/promo-mobile@2x.webp 2x"
